# wtr

./: Cargo.toml  README.md  UNLICENSE
.claude/commands/: next.md
.github/workflows/: ci.yml
scripts/: find-next-issue  gh-issue-view
src/: fetch.rs  lib.rs  lookup.rs  main.rs  render.rs  workspace.rs
tests/: rangemap.rs
tests/fixtures/: rangemap-1.6.0.json  rangemap-1.7.1.json
