[package]
name = "wtr"
version = "0.1.0"
edition = "2024"
license = "Unlicense"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["gzip"] }
zstd = "0.13"
rustdoc-types = "0.57"
clap = { version = "4", features = ["derive"] }
termimad = "0.30"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
